SysMLBasic - Auto full Interface Creation - Sync name actions + Test cases