@@ -13,7 +13,7 @@ import com.samares_engineering.omf.omf_core_framework.errors.OMFErrorHandler;
 import com.samares_engineering.omf.omf_core_framework.errors.exceptions.GenericException;
 import com.samares_engineering.omf.omf_core_framework.feature.AFeature;
 import com.samares_engineering.omf.omf_core_framework.feature.EnvOptionsHelper;
-import com.samares_engineering.omf.omf_core_framework.feature.registrables.actions.actions.IUIAction;
+import com.samares_engineering.omf.omf_core_framework.feature.registrables.actions.IUIAction;
 import com.samares_engineering.omf.omf_core_framework.feature.registrables.options.option.IOption;
 import com.samares_engineering.omf.omf_core_framework.feature.registrables.rule_engines.rule_engine.IRuleEngine;
 import com.samares_engineering.omf.omf_public_features.apiserver.OMFApiServer;
@@ -69,7 +69,7 @@ public class TestGenerationFeature extends AFeature {
 
     @Override
     public List<IUIAction> initFeatureActions() {
-        return Arrays.asList(
+        return List.of(
                 new GenerateCreationTest(),
                 new GenerateSnapshotTest()
         );
